tests/fixtures/valid/operator_precedence.torel
unit fixtures.operator_precedence;

export proc main() -> Int32 {
    1 + 2 * 3
}
