tests/fixtures/invalid/operator_precedence_type_error.torel
unit fixtures.operator_precedence_type_error;

export proc main() -> Int32 {
    1 + true * 3
}
